# minesweeper-ai-solver

./: README.md  pyproject.toml  requirements.txt
app/: demo.py
examples/: quickstart.py
minesweeper/: __init__.py  analysis.py  engine.py  solver.py  utils.py
