[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minesweeper-ai-solver"
version = "1.0.0"
description = "A constraint-based Minesweeper AI solver with multiple inference strategies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["minesweeper", "ai", "solver", "constraint-satisfaction", "game"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
demo = ["streamlit>=1.20.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://github.com/artzhuravel/minesweeper-ai-solver"
Repository = "https://github.com/artzhuravel/minesweeper-ai-solver"

[tool.setuptools.packages.find]
where = ["."]
include = ["minesweeper*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
